@@ -19,9 +19,9 @@ along with GCC; see the file COPYING3.  If not see
 
 extern void override_options (void);
 
-extern int legitimate_constant_address_p (rtx);
-extern int legitimate_constant_p (rtx);
-extern int vax_mode_dependent_address_p (rtx);
+extern bool legitimate_constant_address_p (rtx);
+extern bool legitimate_constant_p (rtx);
+extern bool vax_mode_dependent_address_p (rtx);
 
 #ifdef RTX_CODE
 extern const char *cond_name (rtx);
